--- a/index.html
+++ b/index.html
@@ -13,80 +13,80 @@
   <title>Realistic Sports Bets ⚽</title>
 </head>
 
-<body class="bg-warning">
+<body>
 
-  <header class="d-flex">
-    <h1>
+  <header class="d-flex bg-warning p-4">
+    <p class="ersb-font-size">
       ERSB
-    </h1>
-    <p class="">
+    </p>
+    <p class="d-flex align-items-center ps-4 pt-2 font-size-realistic-sports">
       Extremely Realistic Sports Bets
     </p>
   </header>
-  <main>
+  <main class="d-flex align-items-center">
     <div class="container pt-5">
       <div class="row justify-content-center">
-        <div class="col-4">
-          <div class="text-center">
+        <div class="col-md-4">
+          <div class="text-center text-light fs-4">
             Bank
           </div>
-          <div class="rounded-pill p-3 bg-primary text-center d-flex justify-content-center">
+          <div class="rounded-pill p-3 bg-primary text-center d-flex justify-content-center fs-1">
             $<span id="balance">100</span>
           </div>
         </div>
       </div>
       <div class="row justify-content-center">
-        <div class="col-5">
-          <p>
+        <div class="col-md-5">
+          <p class="text-light fs-4 ps-5">
             Team 1
           </p>
           <div id="team2" class="rounded-pill p-3 bg-primary text-center d-flex justify-content-center fs-2">
           </div>
         </div>
-        <div class="col-5">
-          <p>
+        <div class="col-md-5">
+          <p class="text-light fs-4 ps-5">
             Team 2
           </p>
           <div id="team1" class="rounded-pill p-3 bg-primary text-center d-flex justify-content-center fs-2">
             emojis
           </div>
         </div>
-        <div class="col-6 mt-5">
+        <div class="col-10 col-md-6 mt-5">
           <div class="d-flex justify-content-center">
             <button onclick="drawAllPlayers(); changeTeamNumber(); bet5Team1()" type="button"
-              class="btn btn-primary mx-2">
+              class="btn btn-primary mx-2 fs-2">
               Bet 5
             </button>
             <button onclick="drawAllPlayers(); changeTeamNumber(); bet25Team1()" type="button"
-              class="btn btn-primary mx-2">
+              class="btn btn-primary mx-2 fs-2">
               Bet 25
             </button>
             <button onclick="drawAllPlayers(); changeTeamNumber(); bet100Team1()" type="button"
-              class="btn btn-primary mx-2">
+              class="btn btn-primary mx-2 fs-2">
               Bet 100
             </button>
             <button onclick="drawAllPlayers(); changeTeamNumber(); betItAllTeam1()" type="button"
-              class="btn btn-primary mx-2">
+              class="btn btn-primary mx-2 fs-2">
               Bet it all
             </button>
           </div>
         </div>
-        <div class="col-6 mt-5">
+        <div class="col-10 col-md-6 mt-5">
           <div class="d-flex justify-content-center">
             <button onclick="drawAllPlayers(); changeTeamNumber(); bet5Team2()" type="button"
-              class="btn btn-primary mx-2">
+              class="btn btn-primary mx-2 fs-2">
               Bet 5
             </button>
             <button onclick="drawAllPlayers(); changeTeamNumber(); bet25Team2()" type="button"
-              class="btn btn-primary mx-2">
+              class="btn btn-primary mx-2 fs-2">
               Bet 25
             </button>
             <button onclick="drawAllPlayers(); changeTeamNumber(); bet100Team2()" type="button"
-              class="btn btn-primary mx-2">
+              class="btn btn-primary mx-2 fs-2">
               Bet 100
             </button>
             <button onclick="drawAllPlayers(); changeTeamNumber(); betItAllTeam2()" type="button"
-              class="btn btn-primary mx-2">
+              class="btn btn-primary mx-2 fs-2">
               Bet it all
             </button>
           </div>
@@ -94,6 +94,11 @@
       </div>
     </div>
   </main>
+  <footer>
+    <div class="text-center bg-warning p-1 font-size-realistic-sports">
+      GIMME ALL YA MONEY
+    </div>
+  </footer>
 
   <script src="app.js"></script>
 </body>
